[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mkite_engines"
version = "0.1.0"
description = "engines for connecting messages to/from mkite"
authors = [{name = "Daniel Schwalbe-Koda", email = "dskoda@llnl.gov"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["workflow", "materials-science"]
dependencies = [
    "pydantic",
    "redis",
    "fakeredis",
]

[tool.setuptools]
packages = ["mkite_engines"]
