[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mkite_engines"
version = "24.09.05"
description = "engines for connecting messages to/from mkite"
authors = [{name = "Daniel Schwalbe-Koda", email = "dskoda@ucla.edu"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["workflow", "materials-science"]
dependencies = [
    "pydantic>=2.0",
    "redis",
    "fakeredis",
]

[project.scripts]
kiteng = "mkite_engines.cli.kiteng:kiteng"

[options.extras_require.optional]
shell = [
    "ipython",
]

[tool.setuptools]
packages = ["mkite_engines"]
